Responsive Web Design/Technical Documentation Page/styles.css
body {
    background-color: #ffffff;
    font-family: 'Open Sans', Arial, sans-serif;
    color: #4d4e53;
    line-height: 1.5;
}

header {
    color: black;
    font-size: 1.8em;
}

#main-doc header {
    margin-top: 16px;
}

#main-doc header.introduction {
    margin-top: 0;
}

#navbar a {
    color: #4d4e53;
    text-decoration: none;
    width: 100%;
    height: 100%;
}

#navbar ul {
    list-style-type: none;
}

h1 {
    font-size: 1.2em;
}

pre {
    background-color: #f7f7f7;
    padding: 20px;
}

@media (min-width: 1024px) {
    #navbar {
        position: fixed;
        top: 0;
        left: 0;
        height: 100vh;
        width: 350px;
        border-right: solid;
        border-color: rgba(0, 22, 22, 0.4);
        border-width: 2px;
    }

    #navbar header {
        padding: 10px 16px;
    }

    #navbar a {
        padding-left: 25px;
        font-size: 1.2em;
        width: 100%;
        height: 100%;
        padding-top: 6px;
    }

    #navbar ul {
        padding: 0;
    }

    #navbar li {
        border-top: solid;
        border-color: rgba(0, 22, 22, 0.4);
        position: relative;
        width: 100%;
        height: 40px;
        display: flex;
        border-width: 2px;
    }

    #main-doc {
        position: absolute;
        margin-left: 360px;
        padding: 20px;
    }
}

/*
#navbar {
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    width: 350px;
    border-right: solid;
    border-color: rgba(0, 22, 22, 0.4);
    border-width: 2px;
}

#navbar header {
    padding: 10px 16px;
}

#navbar a {
    color: #4d4e53;
    text-decoration: none;
    padding-left: 25px;
    font-size: 1.2em;
    width: 100%;
    height: 100%;
    padding-top: 6px;
}

#navbar ul {
    list-style-type: none;
    padding: 0;
}

#navbar li {
    border-top: solid;
    border-color: rgba(0, 22, 22, 0.4);
    position: relative;
    width: 100%;
    height: 40px;
    display: flex;
    border-width: 2px;
}

#main-doc {
    position: absolute;
    margin-left: 360px;
    padding: 20px;
}
*/

